[gd_scene load_steps=18 format=3 uid="uid://d2ch01l44hgn5"]

[ext_resource type="Script" path="res://scenes/Ghoul.gd" id="1_hnhca"]
[ext_resource type="PackedScene" uid="uid://wqlkswwkxurl" path="res://scenes/score_display.tscn" id="2_y6plu"]
[ext_resource type="Texture2D" uid="uid://c1ol8jkxo3f" path="res://assets/enemies/ghoul/idle_front-1.png" id="3_gpvjd"]
[ext_resource type="Texture2D" uid="uid://coar3kqx122ao" path="res://assets/enemies/ghoul/idle_front-2.png" id="4_ocbeu"]
[ext_resource type="Texture2D" uid="uid://b7o77xwxtdip2" path="res://assets/enemies/ghoul/idle_front-3.png" id="5_pdk0d"]
[ext_resource type="Texture2D" uid="uid://djfb1ra4p08x2" path="res://assets/enemies/ghoul/sink-1.png" id="6_84rp3"]
[ext_resource type="Texture2D" uid="uid://so6uut3un6i5" path="res://assets/enemies/ghoul/sink-2.png" id="7_hpiby"]
[ext_resource type="Texture2D" uid="uid://hgxou8fg7nar" path="res://assets/enemies/ghoul/sink-3.png" id="8_5nm0e"]
[ext_resource type="Texture2D" uid="uid://dkc6mly6k0xj6" path="res://assets/enemies/ghoul/sink-4.png" id="9_t5tl8"]
[ext_resource type="Texture2D" uid="uid://6y2cl6dh40tu" path="res://assets/enemies/ghoul/sink-5.png" id="10_tbgj6"]
[ext_resource type="Texture2D" uid="uid://t21ksv50rslu" path="res://assets/enemies/ghoul/sink-6.png" id="11_ntmqu"]
[ext_resource type="Texture2D" uid="uid://1islob5abtkr" path="res://assets/enemies/ghoul/sink-7.png" id="12_bykjy"]
[ext_resource type="Texture2D" uid="uid://dfryoscuyhdwo" path="res://assets/enemies/ghoul/sink-8.png" id="13_ub4rc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_72wrb"]
animations = [{
"frames": [{
"duration": 4.0,
"texture": ExtResource("3_gpvjd")
}, {
"duration": 3.0,
"texture": ExtResource("4_ocbeu")
}, {
"duration": 4.0,
"texture": ExtResource("5_pdk0d")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}, {
"frames": [{
"duration": 2.0,
"texture": ExtResource("6_84rp3")
}, {
"duration": 2.0,
"texture": ExtResource("7_hpiby")
}, {
"duration": 2.0,
"texture": ExtResource("6_84rp3")
}, {
"duration": 2.0,
"texture": ExtResource("7_hpiby")
}, {
"duration": 2.0,
"texture": ExtResource("6_84rp3")
}, {
"duration": 2.0,
"texture": ExtResource("7_hpiby")
}, {
"duration": 3.0,
"texture": ExtResource("8_5nm0e")
}, {
"duration": 3.0,
"texture": ExtResource("9_t5tl8")
}, {
"duration": 3.0,
"texture": ExtResource("10_tbgj6")
}, {
"duration": 3.0,
"texture": ExtResource("11_ntmqu")
}, {
"duration": 2.0,
"texture": ExtResource("12_bykjy")
}, {
"duration": 2.0,
"texture": ExtResource("13_ub4rc")
}],
"loop": false,
"name": &"sink",
"speed": 24.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0ihme"]
height = 22.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uobbl"]
size = Vector2(19, 34)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jt0be"]
radius = 3.0
height = 8.0

[node name="Ghoul" type="RigidBody2D"]
position = Vector2(-1, -5)
collision_layer = 8
collision_mask = 8
gravity_scale = 0.0
sleeping = true
lock_rotation = true
script = ExtResource("1_hnhca")

[node name="GhoulHealthDisplay" parent="." instance=ExtResource("2_y6plu")]
z_index = 12
offset_left = -16.0
offset_top = -41.0
offset_right = -16.0
offset_bottom = -41.0
script = null

[node name="GhoulAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_72wrb")
animation = &"idle"

[node name="GhoulAttack" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="GhoulAttackHitbox" type="CollisionShape2D" parent="GhoulAttack"]
position = Vector2(0, -4)
shape = SubResource("CapsuleShape2D_0ihme")
debug_color = Color(0.964706, 0.0509804, 0.454902, 0.419608)

[node name="GhoulHitbox" type="Area2D" parent="."]
position = Vector2(0, -10)
collision_layer = 2
collision_mask = 2

[node name="GhoulHBCollider" type="CollisionShape2D" parent="GhoulHitbox"]
position = Vector2(1.5, -2)
shape = SubResource("RectangleShape2D_uobbl")

[node name="GhoulCollider" type="CollisionShape2D" parent="."]
position = Vector2(1, 1)
shape = SubResource("CapsuleShape2D_jt0be")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="GhoulAnimation" to="." method="_on_animation_finished"]
[connection signal="area_entered" from="GhoulAttack" to="." method="_on_wraith_attack_area_entered"]
[connection signal="body_entered" from="GhoulAttack" to="." method="_on_wraith_attack_body_entered"]
